a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_zhou/invalid4.min
# condition not an int

var x: int;
var y: string;

y = "hello";

if (y) then
  print "this should fail";
endif

